Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4718708.out
T4718708.java:14:13: compiler.err.var.might.be.assigned.in.loop: i
1 error
